force-app/main/default/objects/Checkout_Payment_Config__c/Checkout_Payment_Config__c.object-meta.xml
<CustomObject>
    <label>Checkout_Payment_Config</label>
    <nameField>
        <label>Checkout_Payment_Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checkout_Payment_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>