force-app/main/default/objects/Checkout_Payment_Config__c/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>